--- a/app/application/blueprints/site/views/base.html
+++ b/app/application/blueprints/site/views/base.html
@@ -2,38 +2,49 @@
 
 <div class="container mt-4">
   <h3>Panou principal</h3>
-  <p>A comprehensive live video streaming solution for monitoring multiple camera feeds simultaneously.</p>
+  <p>Aici puteți vizualiza transmisia live a tuturor camerelor de supraveghere conectate.</p>
 
   <div class="videos-container">
+    {% for camera in cameras %}
     <div class="video-container">
-      <img id="video-stream1" src="" alt="Video Stream 1" />
+      <img id="video-stream{{ camera.id }}" src="" alt="Video Stream {{ camera.id }}"/>
+      <div class="camera-info pt-3 pb-3 bg-dark text-white text-center">
+        <div class="camera-name">
+          <i class="fas fa-video"></i>&nbsp;
+          <b>{{ camera.name }}</b>
+        </div>
+        <div class="camera-status">
+          {% if camera.status.id == 0 %}
+            <span class="font-weight-bold text-danger">
+              {{ camera.status.name }}
+            </span>
+            {% elif camera.status.id == 1 %}
+            <span class="font-weight-bold text-success">
+              {{ camera.status.name }}
+            </span>
+            {% else %}
+            <span class="font-weight-bold text-info">
+              {{ camera.status.name }}
+            </span>
+            {% endif %}
+        </div>
+      </div>
       <script>
-        // JavaScript code to update the video stream 1
-        const video1 = document.getElementById('video-stream1');
-        video1.src = '/api/get/frames/1';  // Set the source URL to the Flask route
+        const video{{camera.id}} = document.getElementById('video-stream{{ camera.id }}');
 
-        // Optional: Auto-refresh the video stream every 1 second
+        {% if camera.status.id != 1 %}
+        video{{camera.id}}.src = '/static/images/inactive_camera.png';
+        {% else %}
+        video{{camera.id}}.src = '/api/get/frames/{{ camera.id }}';
+        {% endif %}
+        
         setInterval(() => {
-          video1.src += '?' + new Date().getTime();
+          video{{camera.id}}.src += '?' + new Date().getTime();
         }, 1000);
       </script>
     </div>
-
-    <div class="video-container">
-      <img id="video-stream2" src="" alt="Video Stream 2" />
-      <script>
-        // JavaScript code to update the video stream 2
-        const video2 = document.getElementById('video-stream2');
-        video2.src = '/api/get/frames/1';  // Set the source URL to the Flask route
-
-        // Optional: Auto-refresh the video stream every 1 second
-        setInterval(() => {
-          video2.src += '?' + new Date().getTime();
-        }, 1000);
-      </script>
-    </div>
+    {% endfor %}
   </div>
-  <!-- Add more video containers for additional streams -->
 </div>
 
 {% include 'footer.html' %}
