--- a/app/application/controllers/static/css/style.css
+++ b/app/application/controllers/static/css/style.css
@@ -133,9 +133,14 @@ body {
     border: 1px solid #ccc;
     border-radius: 10px;
     overflow: hidden;
+    position: relative; /* Add position relative for overflow handling */
+
   }
 
   .video-container img {
     width: 100%;
     height: auto;
+    max-width: 100%; /* Limit image width to prevent overflow */
+    max-height: 100%; /* Limit image height to prevent overflow */
+    object-fit: contain; /* Scale the image to fit within the container */
   }
