--- a/app/application/controllers/static/css/style.css
+++ b/app/application/controllers/static/css/style.css
@@ -122,14 +122,14 @@ body {
   .videos-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     gap: 20px;
   }
 
   .video-container {
-    width: 50%;
-    max-width: 500px;
+    width: 50%;;
+    max-width: 360px;
     border: 1px solid #ccc;
     border-radius: 10px;
     overflow: hidden;
